# regression

./: LICENSE  README.md  regression.cabal
app/: HMatrixGradient.hs  HMatrixNewtons.hs  House.hs  RepaGradient.hs  Week1.hs  Week2.hs
src/: .Regression.hs.swp  FeatureChart.hs  Regression.hs  Stat.hs
src/Regression/: HMatrix.hs  Repa.hs
test/: House.hs
