name:                regression
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/markrgrant/regression#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Grant
maintainer:          markrgrant@yahoo.com
copyright:           Mark Grant
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Stat, House, FeatureChart, Regression
  build-depends:       base >= 4.7 && < 5,
                       Chart
                     , Chart-cairo
                     , cassava
                     , accelerate
                     , vector
                     , repa
                     , repa-algorithms
                     , repa-io
                     , bytestring
                     , text
  default-language:    Haskell2010

executable week1
  hs-source-dirs:      app
  main-is:             Week1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , regression
                     , Chart
                     , Chart-cairo
                     , bytestring
                     , text
                     , vector
                     , cassava
  default-language:    Haskell2010

executable week2
  hs-source-dirs:      app
  main-is:             Week2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , regression
                     , bytestring
                     , vector
                     , cassava
                     , repa
                     , repa-algorithms
  default-language:    Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , regression
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/markrgrant/regression
