name:                regression
version:             0.1.0.0
synopsis:            multiple linear regression with gradient descent
description:         Please see README.md
homepage:            https://github.com/markrgrant/regression#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Grant
maintainer:          markrgrant@yahoo.com
copyright:           Mark Grant
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Regression.Repa
                     , Regression.HMatrix
                     , Stat
  build-depends:       base >= 4.7 && < 5
                     , repa
                     , repa-algorithms
                     , hmatrix
                     , vector
  default-language:    Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , regression
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/markrgrant/regression
