name:                regression
version:             0.1.0.0
synopsis:            multiple linear regression with gradient descent
description:         Please see README.md
homepage:            https://github.com/markrgrant/regression#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Grant
maintainer:          markrgrant@yahoo.com
copyright:           Mark Grant
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Regression.Repa
                     , Regression.HMatrix
                     , Stat
  build-depends:       base >= 4.7 && < 5
                     , repa
                     , repa-algorithms
                     , hmatrix
                     , vector
                     , containers
  default-language:    Haskell2010

executable repagradient
  hs-source-dirs:      app
  main-is:             RepaGradient.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , regression
                     , Chart
                     , Chart-cairo
                     , bytestring
                     , text
                     , vector
                     , cassava
                     , random
                     , random-shuffle
                     , hmatrix
  default-language:    Haskell2010


executable hmatrixgradient
  hs-source-dirs:      app
  main-is:             HMatrixGradient.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , regression
                     , Chart
                     , Chart-cairo
                     , bytestring
                     , text
                     , vector
                     , cassava
                     , random
                     , random-shuffle
                     , hmatrix
  default-language:    Haskell2010


executable hmatrixnewtons
  hs-source-dirs:      app
  main-is:             HMatrixNewtons.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , regression
                     , Chart
                     , Chart-cairo
                     , bytestring
                     , text
                     , vector
                     , cassava
                     , random
                     , random-shuffle
                     , hmatrix
  default-language:    Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , regression
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/markrgrant/regression
